@@ -1,8 +1,8 @@
-L     I X   X   A
-L     I  X X   A A    LIXA
-L     I   X   A   A   LIbre XA
-L     I  X X  AAAAA   a free and open source XA Transaction Manager
-LLLLL I X   X A   A   http://www.tiian.org/lixa/
+ _     _____  __    _    
+| |   |_ _\ \/ /   / \    LIXA
+| |    | | \  /   / _ \   LIbre XA
+| |___ | | /  \  / ___ \  a free and open source XA Transaction Manager
+|_____|___/_/\_\/_/   \_\ http://www.tiian.org/lixa/
 
 
 
