@@ -1,6 +1,10 @@
 LOG:
 
          - 1.5.4
+		 This release is *NOT* compatible with previous ones: you can't
+		 mix 1.5.4 and previous versions in the same environment
+		 (message LXC030E will be logged in the event of level
+		 mismatch); LIXA_MSG_LEVEL=2
 
 20180413 - 1.5.3 XTA documentation: a dedicated chapter has been added in the
 		 official LIXA manual
